[tool.poetry]
name = "line_notify_bot"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
autoflake = "^1.4"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-quotes = "^3.3.1"
flake8-print = "^4.0.0"
isort = "^5.10.1"
black = "^21.11b1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pytest-profiling = "^1.7.0"
pytest-randomly = "^3.10.2"
pytest-timeout = "^2.0.1"
pytest-xdist = "^2.4.0"
jupyter = "^1.0.0"
jupyterlab = "^3.2.4"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterthemes = "^0.20.0"
toml = "^0.10.2"
python-dotenv = "^0.19.2"
fire = "^0.4.0"
timeout-decorator = "^0.5.0"

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.black]
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
